--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
 
-{{ partial "banner.html" . }}
-
 {{ partial "navigation.html" . }}
+
+{{ partial "banner.html" . }}
 
 {{ partial "about.html" . }}
 
@@ -14,7 +14,7 @@
 
 {{ partial "skill.html" . }}
 
-{{ partial "portfolio.html" . }}
+ <!--{{ partial "portfolio.html" . }} -->
 
 {{ partial "funfacts.html" . }}
 
@@ -24,7 +24,7 @@
 
 {{ partial "testimonial.html" . }}
 
-{{ partial "blog.html" . }}
+<!-- {{ partial "blog.html" . }}  -->
 
 {{ partial "contact.html" . }}
 
